seeqt/QtQuick/gen_qsgimagenode.h

class QRectF;
class QSGGeometry;
class QSGImageNode;
class QSGTexture;
typedef struct QRectF QRectF;
typedef struct QSGGeometry QSGGeometry;
typedef struct QSGImageNode QSGImageNode;
typedef struct QSGTexture QSGTexture;
void QSGImageNode_setRect(QSGImageNode* self, QRectF* rect);
void QSGImageNode_setRect2(QSGImageNode* self, double x, double y, double w, double h);
QRectF* QSGImageNode_rect(const QSGImageNode* self);
void QSGImageNode_setSourceRect(QSGImageNode* self, QRectF* r);
void QSGImageNode_setSourceRect2(QSGImageNode* self, double x, double y, double w, double h);
QRectF* QSGImageNode_sourceRect(const QSGImageNode* self);
void QSGImageNode_setTexture(QSGImageNode* self, QSGTexture* texture);
QSGTexture* QSGImageNode_texture(const QSGImageNode* self);
void QSGImageNode_setFiltering(QSGImageNode* self, int filtering);
int QSGImageNode_filtering(const QSGImageNode* self);
void QSGImageNode_setMipmapFiltering(QSGImageNode* self, int filtering);
int QSGImageNode_mipmapFiltering(const QSGImageNode* self);
void QSGImageNode_setTextureCoordinatesTransform(QSGImageNode* self, int mode);
int QSGImageNode_textureCoordinatesTransform(const QSGImageNode* self);
void QSGImageNode_setOwnsTexture(QSGImageNode* self, bool owns);
bool QSGImageNode_ownsTexture(const QSGImageNode* self);
void QSGImageNode_rebuildGeometry(QSGGeometry* g, QSGTexture* texture, QRectF* rect, QRectF* sourceRect, int texCoordMode);
void QSGImageNode_delete(QSGImageNode* self);